Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110837

error: 'friend' used outside of class

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P0: Blocker
    • 6.5.0, 6.6.0
    • 6.5.0 Beta3
    • OpcUA
    • None
    • 54cec1bb4 (dev), a9f1cfc1a (6.5)

    Description

      /Users/qt/work/qt/qtopcua_build/include/QtDeclarativeOpcua/6.5.0/QtDeclarativeOpcua/private/../../../../../../qtopcua/src/declarative_opcua/opcuastatus_p.h:292:5: error: 'friend' used outside of class
      QML_UNCREATABLE("This type can not be created.")
      ^
      /Users/qt/work/install/include/QtQmlIntegration/qqmlintegration.h:57:34: note: expanded from macro 'QML_UNCREATABLE'
      template<typename, typename> friend struct QML_PRIVATE_NAMESPACE::QmlUncreatable; \
      ^
      In file included from /Users/qt/work/qt/qtopcua_build/src/declarative_opcua/DeclarativeOpcua_autogen/mocs_compilation.cpp:5:
      In file included from /Users/qt/work/qt/qtopcua_build/src/declarative_opcua/DeclarativeOpcua_autogen/EWIEGA46WW/moc_opcuaconnection_p.cpp:9:
      In file included from /Users/qt/work/qt/qtopcua_build/src/declarative_opcua/DeclarativeOpcua_autogen/EWIEGA46WW/../../../../../qtopcua/src/declarative_opcua/opcuaconnection_p.h:7:
      In file included from /Users/qt/work/qt/qtopcua_build/include/QtDeclarativeOpcua/6.5.0/QtDeclarativeOpcua/private/opcuaserverdiscovery_p.h:1:
      In file included from /Users/qt/work/qt/qtopcua_build/include/QtDeclarativeOpcua/6.5.0/QtDeclarativeOpcua/private/../../../../../../qtopcua/src/declarative_opcua/opcuaserverdiscovery_p.h:7:
      In file included from /Users/qt/work/qt/qtopcua_build/include/QtDeclarativeOpcua/6.5.0/QtDeclarativeOpcua/private/opcuastatus_p.h:1:
      /Users/qt/work/qt/qtopcua_build/include/QtDeclarativeOpcua/6.5.0/QtDeclarativeOpcua/private/../../../../../../qtopcua/src/declarative_opcua/opcuastatus_p.h:292:5: error: cannot define or redeclare 'QmlUncreatable' here because namespace 'OpcuaStatusForeign' does not enclose namespace 'QQmlPrivate'
      

      Build log: https://testresults.qt.io/logs/qt/qtopcua/eb8e0366266367939e14535cfaa01e21b11376d0/MacOSMacOS_12arm64MacOSMacOS_12x86_64-arm64Clangqtci-macos-12-arm64UseConfigure_WarningsAreErrors/3789274d72ece50ebf18a78ec596dbb7a73611fe/build_1681970204/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtopcua/tasks/1681970141

      Tested changes (refs/builds/qtci/6.5/1675191380):
      https://codereview.qt-project.org/c/qt/qtopcua/+/456842/3 Update dependencies on '6.5' in qt/qtopcua

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes