Drop QML_UNCREATABLE macros from namespaces

Namespaces are always uncreatable.

Pick-to: 6.5
Fixes: QTBUG-110837
Change-Id: I9382acc5fefba1b17a1490aa0f53437f0a5c8608
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
Reviewed-by: Frank Meerkoetter <frank.meerkoetter@basyskom.com>